@@ -3,6 +3,7 @@ package com.uber.nullaway.jspecify;
 import com.google.errorprone.CompilationTestHelper;
 import com.uber.nullaway.NullAwayTestsBase;
 import java.util.Arrays;
+import java.util.List;
 import org.junit.Ignore;
 import org.junit.Test;
 
@@ -1793,6 +1794,7 @@ public class GenericsTests extends NullAwayTestsBase {
         .doTest();
   }
 
+  @Test
   public void boxInteger() {
     makeHelper()
         .addSourceLines(
@@ -1824,6 +1826,6 @@ public class GenericsTests extends NullAwayTestsBase {
   }
 
   private CompilationTestHelper makeHelperWithoutJSpecifyMode() {
-    return makeTestHelperWithArgs(Arrays.asList("-XepOpt:NullAway:AnnotatedPackages=com.uber"));
+    return makeTestHelperWithArgs(List.of("-XepOpt:NullAway:AnnotatedPackages=com.uber"));
   }
 }
